# music-app

./: .gitignore  CMakeLists.txt  ps6.pro
src/: configdialog.h  cursor.h  nash.h  page.h
